--- a/app/src/main/res/values/string.xml
+++ b/app/src/main/res/values/string.xml
@@ -9,8 +9,8 @@
     <string name="tap">long press</string>
 
     <plurals name="measurement_output_template">
-        <item quantity="zero">Pulse: %2.1f (%d cycle in %2.1f seconds)</item>
-        <item quantity="one">Pulse: %2.1f (%d cycle in %2.1f seconds)</item>
-        <item quantity="other">Pulse: %2.1f (%d cycles in %2.1f seconds)</item>
+        <item quantity="zero">Pulse: %2.1f </item>
+        <item quantity="one">Pulse: %2.1f </item>
+        <item quantity="other">Pulse: %2.1f</item>
     </plurals>
 </resources>
