--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -98,6 +98,15 @@
         android:translationY="150dp"
         />
 
+
+    <Button
+        android:id="@+id/view_result"
+        android:layout_width="150dp"
+        android:layout_height="73dp"
+        android:layout_gravity="bottom"
+        android:clickable="true"
+        android:text="ViewResult" />
+
     <TextureView
         android:id="@+id/textureView2"
         android:layout_width="32dp"
