--- a/app/src/main/res/values/string.xml
+++ b/app/src/main/res/values/string.xml
@@ -7,7 +7,8 @@
     <string name="text_label_1">Measure</string>
     <string name="text_label_2">Statistics</string>
     <string name="tap">long press</string>
-
+<string name="process1">Result1</string>
+    <string name="process2">Result2</string>
     <plurals name="measurement_output_template">
         <item quantity="zero">Pulse: %2.1f </item>
         <item quantity="one">Pulse: %2.1f </item>
