--- a/app/src/main/res/layout-xxhdpi/activity_main.xml
+++ b/app/src/main/res/layout-xxhdpi/activity_main.xml
@@ -104,43 +104,14 @@
         android:layout_height="32dp" />
 
 
-    <!--    <TextureView-->
-    <!--        android:id="@+id/graphTextureView"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
+    <Button
+        android:id="@+id/view_result"
+        android:layout_width="150dp"
+        android:layout_height="73dp"
+        android:layout_gravity="bottom"
+        android:clickable="true"
+        android:text="ViewResult" />
 
-    <!--        android:layout_below="@+id/anime" />-->
-
-    <!--    <include layout="@layout/content_main"/>-->
-    <!--    <me.itangqi.waveloadingview.WaveLoadingView-->
-    <!--        android:id="@+id/waveloadingview"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="90dp"-->
-    <!--        android:layout_gravity="center_vertical"-->
-    <!--        app:layout_anchorGravity="bottom"-->
-    <!--        app:wlv_borderColor="@color/colorAccent"-->
-    <!--        app:wlv_borderWidth="3dp"-->
-    <!--        app:wlv_round_rectangle="true"-->
-    <!--        app:wlv_shapeType="circle"-->
-    <!--        app:wlv_triangle_direction="north"-->
-
-    <!--        app:wlv_titleCenterColor="@android:color/white"-->
-    <!--        app:wlv_titleCenterSize="24sp"-->
-    <!--        app:wlv_titleCenterStrokeColor="@color/holo_blue_dark"-->
-    <!--        app:wlv_titleCenterStrokeWidth="3dp"-->
-    <!--        app:wlv_waveAmplitude="70"-->
-    <!--        app:wlv_waveColor="@color/colorAccent" />-->
-
-    <!--        app:wlv_titleBottomSize="24sp"-->
-    <!--        app:wlv_titleBottomStrokeColor="@color/holo_blue_dark"-->
-    <!--        app:wlv_titleBottomStrokeWidth="3dp"-->
-    <!--        app:wlv_titleBottomColor="@android:color/white"-->
-
-
-    <!--        app:wlv_titleTopSize="24sp"-->
-    <!--        app:wlv_titleTopStrokeColor="@color/holo_blue_dark"-->
-    <!--        app:wlv_titleTopStrokeWidth="3dp"-->
-    <!--        app:wlv_titleTopColor="@android:color/white"-->
 
 
 
