[Dashboard] Fixed the error illegalArgumentException

--- a/app/src/main/res/menu/menu_laun.xml
+++ b/app/src/main/res/menu/menu_laun.xml
@@ -15,4 +15,9 @@
         android:icon="@drawable/ic_history_black_24dp"
         android:title="@string/history"
         />
+    <item
+        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:title="@string/dashboard"
+        android:id="@+id/dashboard"/>
+
 </menu>
