--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -19,12 +19,12 @@
             android:src="@drawable/ic_favorite_black_24dp" />
 
         <TextView
-            android:id="@+id/month"
+            android:id="@+id/dayofmonth"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/heartrate_history"
-            android:layout_marginLeft="50dp"
-            android:layout_toRightOf="@+id/heartrate_history"
+            android:layout_marginStart="50dp"
+            android:layout_toEndOf="@+id/heartrate_history"
             android:text="@string/Month"
             android:textSize="21sp" />
 
@@ -33,9 +33,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
-            android:layout_marginLeft="50dp"
             android:layout_marginTop="25dp"
-            android:layout_toRightOf="@+id/heartsymbol"
+            android:layout_toEndOf="@+id/heartsymbol"
             android:fontFamily="@font/roboto_regular"
             android:text="@string/heartrate"
             android:textColor="#666666"
