--- a/app/src/main/res/values/string.xml
+++ b/app/src/main/res/values/string.xml
@@ -7,6 +7,8 @@
     <string name="text_label_1">Measure</string>
     <string name="text_label_2">Statistics</string>
     <string name="tap">long press</string>
+    <string name="heart_rate_with_hp">%1$s HP</string>
+    <string name="day"> %1$d</string>
 
     <plurals name="measurement_output_template">
         <item quantity="zero">Pulse: %2.1f </item>
